name: aoc2017
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    passphrases.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable aoc2017
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      containers -any
  default-language: Haskell2010
  other-modules:
      Day5
      Day4
      Day6
      Day2
      Day3
